# otus-c-2023-07-azorin

./: .gitignore  README.md
HW01/: .zipjpeg_detector.c.swp  README.md  zipjpeg_detector  zipjpeg_detector.c
HW02/: README.md  converter.c  converter.h
HW03/: build.sh  hashtable.c  hashtable.h  main.c
HW04/: README.md  build.sh  jsonParser.c  jsonParser.h  main  main.c  weather.c  weather.h
HW05/: REAMDME.md  main.asm  main.c
HW07/: README.md  leak.diff
HW09/: build.sh  example.c  example.txt  logger.c  logger.h
HW10/: CMakeLists.txt  README.md  daemon.c  daemon.conf  example.txt
HW11/: build.sh  crc.c  crc.h  crc32.c  crc32.h  crc_big_file.c  main
HW12/: CMakeLists.txt  file_reader.c  file_reader.h  main  main.c  parser  parser.c  parser.h
